--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -1,15 +1,51 @@
 .header {
-    height: 60px;
-    background-color: aqua;
+    width: 100%;
+    height: 80px;
 }
 
-.nav_list {
+.header_container {
+    margin: 0 auto;
+    padding: 0 45px;
+    width: 100%;
+    max-width: 1440px;
     height: 100%;
-    gap: 50px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    max-height: 40px;
+}
+
+.nav {
+    color: var(--white);
+    gap: 100px;
+}
+
+.nav_item {
+    gap: 10px;
 }
 
 .nav_link {
-    display: flex;
-    align-items: center;
     height: 100%;
+    align-items: center;
+    font-size: 16px;
+}
+
+.nav_link:hover {
+    text-decoration: underline;
+}
+
+.nav_link_icon {
+    max-width: 20px;
+}
+
+.header_left {
+    align-items: center;
+    font-size: 0;
+    gap: 35px;
+}
+
+.header_left_item {
+    position: relative;
 }
