--- a/frontend/src/Pages/BenefitsPage/BenefitsPage.module.css
+++ b/frontend/src/Pages/BenefitsPage/BenefitsPage.module.css
@@ -1,53 +1,26 @@
-.container {
-    display: grid;
-    grid-template-columns: 1fr 4fr;
+.grid {
     gap: 40px;
     margin: 0 auto;
-    max-width: 1440px;
-    height: 100%;
     width: 100%;
-    padding: 25px 45px;
-    grid-template-areas:
-        'top top'
-        'filters benefits';
-}
-
-.aside {
-    display: grid;
-    grid-template-rows: 50px auto;
-}
-
-.main {
-    display: grid;
-    grid-template-rows: 50px auto;
-    grid-template-columns: auto calc((100% - 120px) / 4);
-    gap: 40px;
-    grid-template-areas:
-        'search benefit_button'
-        'benefits benefits';
+    flex-direction: column;
+    height: calc(100vh - 105px);
 }
 
 .list_wrap {
-    grid-area: benefits;
+    padding-bottom: 50px;
+    flex-basis: calc(80% - 20px);
 }
 
 .list {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(auto-fill, 350px);
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 40px;
     width: 100%;
-}
-.page_top {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    margin-bottom: 45px;
-    gap: 40px;
 }
 
 .search_input {
-    grid-area: search;
-    width: 100%;
+    flex-grow: 1;
+    flex-basis: calc(60% - 40px / 3);
     padding: 17px 25px;
     background-color: var(--graphite);
     color: var(--white);
@@ -59,7 +32,7 @@
 }
 
 .benefit_button {
-    grid-area: benefit_button;
+    flex-basis: calc(20% - 80px / 3);
     background-color: var(--mint);
     font-size: 16px;
     line-height: 24px;
@@ -67,7 +40,7 @@
     color: var(--graphite);
     justify-content: center;
     align-items: center;
-    transition: .1s ease-in-out;
+    transition: 0.1s ease-in-out;
 }
 
 .benefit_button:hover,
@@ -82,6 +55,7 @@
 }
 
 .filters {
+    flex-basis: calc(20% - 20px);
     flex-direction: column;
     color: var(--white);
 }
@@ -95,6 +69,7 @@
 
 .filters_label {
     gap: 10px;
+    padding: 5px 5px 5px 0;
     font-size: 17px;
     line-height: 26px;
     user-select: none;
@@ -102,9 +77,19 @@
 }
 
 .checkbox {
-    accent-color: var(--mint);
-    height: 16px;
-    width: 16px;
+    appearance: none;
+    position: relative;
+    width: 20px;
+    height: 20px;
+    border: 2px solid var(--mint);
+}
+
+.checkbox:checked {
+    background-color: var(--mint);
+}
+
+.admin_mode {
+    flex-basis: calc(20% - 40px / 3);
 }
 
 .admin_mode_text {
@@ -113,3 +98,11 @@
     line-height: 24px;
 }
 
+.top {
+    gap: 40px;
+}
+
+.benefits {
+    gap: 40px;
+    height: calc(100% - 100px);
+}
