--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -19,21 +19,32 @@
 
 .nav {
     color: var(--white);
-    gap: 100px;
+    gap: 50px;
 }
 
 .nav_item {
     gap: 10px;
+    padding: 0 25px;
 }
 
 .nav_link {
-    height: 100%;
     align-items: center;
     font-size: 16px;
+    position: relative;
 }
 
-.nav_link:hover {
-    text-decoration: underline;
+.nav_link::after {
+    position: absolute;
+    content: '';
+    height: 0px;
+    width: 100%;
+    background-color: white;
+    bottom: -1px;
+    transition: height .1s ease-in-out;
+}
+
+.nav_link:hover::after {
+    height: 2px;
 }
 
 .nav_link_icon {
